adds filter for population and alpha order

--- a/Views/Home/Alpha.cshtml
+++ b/Views/Home/Alpha.cshtml
@@ -11,12 +11,9 @@
             <label for="population"></label>
             <input type="number" name="population">
             <button type="submit" class="btn btn-success">Filter</button>
-          </form>
-          <form class="form-control" action="/new" method="post">
-            <label for="name"></label>
-            <input type="number" name="name">
-            <button type="submit" class="btn btn-success">Sort Alphabetically</button>
-          </form>
+
+            <button type="click" name="name" class="btn btn-success">Sort Alphabetically</button>
+
       </div>
       @if(Model!=null)
       {
